2004-09-30  Rich Kilmer  <rich@infoether.com>

        * lib/rubygems/specification.rb -  externalized the loaded_from runtime 
          var on specification
        * lib/rubygems/cache.rb - optimized cache refresh! method and refactored 
          processing of files when building cache.
        * lib/rubygems/loadpath_manager.rb - fixed bug in loadpath manager in 
          finding native extensions that have ext on os x, win32 and solaris

2004-09-20  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/gem_commands.rb:  If file match during local install is
	a directory, don't try to treat it erroneously as a gem (bug reported
	by Rich).
	* lib/rubygems.rb:  Fixed small bug in #latest_load_paths

2004-09-14  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems.rb: Fixed bug in require_gem (thanks Jamis Buck!)
	that would require a gem based on an inexact search of its name
	in the local cache.  This caused copland-webrick to be loaded
	when a request was made for "copland".

2004-09-12  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/specification.rb, test/test_specification.rb: Removed
        library_stubs attribute.

2004-09-12  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* scripts/specdoc.rb: Check that all attributes are documented; and
	  improved formatting.
	* scripts/specdoc.yaml: test_suite_file -> test_files; finished
	  documentation.
	* scripts/specdoc.data: misc changes.

2004-09-11  Chad Fowler <chad@chadfowler.com>

  * test/test_parse_commands.rb: Fix failing unit tests due to Rich's fix from

  * lib/rubygems/specification.rb: Add bindir to executable path on file list

2004-09-11  Rich Kilmer <rich@infoether.com>

  * lib/rubygems/gem_commands.rb - got rid of stub options

  * lib/rubygems/install.rb - changed output of messages so the UI would format
    better 

  * bin/gem_server - exit! from ^c

2004-09-09  Chad Fowler <chad@chadfowler.com>
  * lib/rubygems/loadpath_manager.rb: Small bug when gem specs have ruby 